feat: show tree btn feat: show tree btn

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
     <title>Organization Table</title>
   </head>
 
